feat(core): 增强Agent抽象类实现和文件加载机制
- 添加了持久化管理员列表支持
- 实现了Agent序列化数据类和文件加载管理机制
- 增加了计时器transient修饰符和详细注释
- 添加了文件加载过滤逻辑，跳过配置文件目录
- 实现了DeepSeek模型的序列化数据支持
- 优化了JSON文件读取和Pretty打印功能
- 增加了日志记录和调试信息输出
- 添加了字段处理过滤器，跳过静态/最终/临时字段
- 实现了玩家管理器的日志输出功能