@@ -5,12 +5,15 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonIOException;
 import lombok.extern.log4j.Log4j2;
+import org.checkerframework.checker.units.qual.C;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -25,9 +28,13 @@ public class FileUtil {
      */
     public static final Path base_url = NeuraCraft.configPath.resolve("neuracraft");
     /**
-     * Agent 配置文件根目录
+     * Agent 文件根目录
      */
     public static final Path agent_base_url = base_url.resolve("agent");
+    /**
+     * Agent 配置文件根目录
+     */
+    public static final Path agent_config_url = agent_base_url.resolve("config");
     /**
      * 玩家配置文件根目录
      */
@@ -72,7 +79,7 @@ public class FileUtil {
     public static <T> @NotNull T loadJsonFromFile(@NotNull Path filePath, Class<T> clazz) throws IOException{
         T t;
         try (FileReader reader = new FileReader(filePath.toFile())){
-            t = new Gson().fromJson(reader, clazz);
+            t = new GsonBuilder().setPrettyPrinting().create().fromJson(reader, clazz);
         }
 
         if (!(t == null)){
@@ -86,8 +93,10 @@ public class FileUtil {
         T other = (T) loadJsonFromFile(filePath, clazz.getClass());
         Field [] fields = clazz.getClass().getDeclaredFields();
         for (Field field : fields){
+            if (!shouldProcess(field)) continue;
             field.setAccessible(true);
             try {
+                log.debug("load {}'s field {} from {} value {}", clazz, field.getName(), other, field.get(other));
                 field.set(clazz, field.get(other));
             } catch (IllegalAccessException e) {
                  log.error("IllegalAccessException: {}", e.getMessage());
@@ -96,11 +105,18 @@ public class FileUtil {
         }
     }
 
-    public static List<Path> readAllFilePath(Path baseURL) throws IOException {
-        try (Stream<Path> paths = Files.list(baseURL)){
+    private static boolean shouldProcess(@NotNull Field field) {
+        int modifiers = field.getModifiers();
+        return !Modifier.isStatic(modifiers)
+                && !Modifier.isFinal(modifiers)
+                && !Modifier.isTransient(modifiers);
+    }
+
+    public static @NotNull @Unmodifiable List<Path> readAllFilePath(Path baseURL) throws IOException {
+        try (Stream<Path> paths = Files.walk(baseURL)){
             return paths
                     .filter(Files::isRegularFile)
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 }
